--- a/helloworld.html
+++ b/helloworld.html
@@ -63,6 +63,7 @@
   </div>  
   
   <!-- Footer -->
+<footer>
   <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
